--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <main>
   <div class="love-container">
-    <h1 class="love">I Love You</h1>
+    <h1 class="BEBI">I Love You</h1>
   </div>
   <div class="heading-container">
     <h1 class="heading">Happy Valentine's Day</h1>
